tooling/nargo_cli/tests/snapshots/execution_success/array_len/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: [u8; 3], v2: [Field; 4]):
    (no terminator instruction)
}
